k8s/ingress.gras.frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shop
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "grascannabis.org"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: gras-service-shop
              port:
                number: 80
  - host: "www.grascannabis.org"
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: gras-service-shop
              port:
                number: 80
  - host: "app.grascannabis.org"
    http:
      paths:
        - path: /app
          pathType: ImplementationSpecific
          backend:
            service:
              name: gras-service-dashboard
              port:
                number: 80                
  - host: "*.grascannabis.org"
    http: 
      paths: 
        - path: /_stores
          pathType: ImplementationSpecific
          backend:
            service:
              name: gras-service-shop
              port:
                number: 80
